# quiet-transfer

./: .gitignore  compile_cffi.py  mypy.ini  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
include_posix/: quiet_cffi.h
lib_win32/: fec.lib  jansson.lib  liquid.lib  portaudio.lib  quiet.lib
src/pyquietlib/: Receive.py  Send.py  __init__.py  __main__.py  _receive_data_posix.py  _receive_data_win32.py  _send_data_posix.py  _send_data_win32.py
src/quiettransfer/: Reader.py  Receive.py  Send.py  __main__.py
src/tests/: test_compress_file.py
src/transferquiet/: Receive.py  Send.py  __init__.py  __main__.py
