[build-system]
requires = ["setuptools>=60", "cffi>=1.12.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyquietlib"
dynamic = ["version"]
authors = [{name = "Matteo Tenca", email = "matteo.tenca@gmail.com"}]
license = {file = "LICENSE.md"}
dependencies = ["cffi>=1.12.0", "pyaudio", "soundfile"]

[project.urls]
homepage = "https://github.com/matteotenca/pyquietlib"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "pyquietlib.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
transfer-file = "pyquietlib.__main__:_main"
